# claude-persona-bench

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
scripts/: generate_chart.py
src/persona_bench/: cli.py  config.py  models.py
src/persona_bench/evaluator/: sandbox.py  scorer.py
src/persona_bench/personas/: registry.py
src/persona_bench/problems/: loader.py
src/persona_bench/reporter/: stats.py  tables.py
src/persona_bench/results/: store.py
src/persona_bench/runner/: anthropic.py  client.py  engine.py  extract.py  groq.py  openai.py
tests/: test_cli.py  test_extract.py  test_models.py  test_sandbox.py  test_scorer.py  test_store.py
