[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persona-bench"
version = "0.1.0"
description = "Benchmark whether system prompt personas affect Claude's code generation quality"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
persona-bench = "persona_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_bench"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
