[project]
name = "persona-bench"
version = "0.1.0"
description = "Benchmark whether system prompt personas affect LLM code generation quality"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.52",
    "groq>=0.26",
    "openai>=1.0",
    "genai-prices>=0.0.1",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
persona-bench = "persona_bench.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persona_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "groq.*", "openai.*", "genai_prices.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
